Fix height problem on mobile 2

--- a/style.css
+++ b/style.css
@@ -4,12 +4,13 @@ body {
 }
 
 #card {
-  width: 60vw;
-  min-height: 60vh;
+  
   margin-top: 15vh;
 }
 
 .front {
+  width: 60%;
+  min-height: 60%;
   padding-top: 10%;
   padding-left: 10%;
   padding-right: 10%;
@@ -20,6 +21,8 @@ body {
 }
 
 .back {
+  width: 60%;
+  min-height: 60%;
   padding-top: 10%;
   padding-left: 10%;
   padding-right: 10%;
